--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "source": "/api/varanasi/:match",
       "destination": "https://varanasi-backend.vercel.app/:match"
+    },
+    {
+      "source": "/api/varanasi/:match/:match2",
+      "destination": "https://varanasi-backend.vercel.app/:match/:match2"
     }
   ]
 }
