Added vercel speed insights

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "next build && next start"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.15",
