--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.15",
+    "gray-matter": "^4.0.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sharp": "^0.33.2",
     "zustand": "^4.5.2"
   },
