--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "preview": "next build && next start"
   },
   "dependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/typography": "^0.5.10",
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.15",
     "gray-matter": "^4.0.3",
     "next": "14.1.4",
