--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "server-only": "^0.0.1",
     "sharp": "^0.33.2",
     "zustand": "^4.5.2"
   },
