chore: Add new route for Flutter HTML to Flutter project in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,10 @@
     {
       "source": "/flutter/html_to_flutter",
       "destination": "https://html-to-flutter.vercel.app/"
+    },
+    {
+      "source": "/flutter/html_to_flutter/:match*",
+      "destination": "https://html-to-flutter.vercel.app/:match*"
     }
   ]
 }
